--- a/css/css/_content.scss
+++ b/css/css/_content.scss
@@ -1,49 +1,14 @@
-body							{
-								font-family:arial;
-								margin:0px 0px 0px 0px;
-								padding:0px;
-								background-color: #cccccc;
-								}
-.menu							{
-								text-align: center;
-								float:right;
-								width:100px;
-								height:80%;
-								font-size:20px;
-								transition:background 2s;
-								border:0px solid white;
-								padding-top:10px;
-								cursor:pointer;
-								}
-.menu:hover						{
-								background:#B8AEAE;
-								}
-.kotak							{
-								width:100%;
-								height:55px;
-								border:1px solid black;
-								background:#323232;
-								position:fixed;
-								padding-left:100px;
-								z-index:1;
-								}
-.logo							{
-								float:left;
-								width:100px;
-								cursor:pointer;
-								}
+$break-small:480px;
 
-.header							{
-								font-family:Times New Roman;
-								font-size:35px;
-								color:white;
-								background:#323232;
-								position:fixed;
-								padding-left:10px;
-								padding-top:10px;
-								padding-bottom:10px;
-								width:84%;
-								height:35px;
+.gambar							{
+								width:87%;
+								margin-left:100px;
+								border:1px solid black;
+	@media screen and (max-width: $break-small) {
+								margin-left:3px;
+								width:448px;
+								height:298px;
+								}
 								}
 .isi							{
 								font-family:arial;
@@ -54,43 +19,54 @@ body							{
 								padding-left:70px;
 								padding-right:70px;
 								margin-left:100px;
-								width:1007px;
+								width:76.64%;
 								height:800px;
 								border:1px solid black;
+	@media screen and (max-width: $break-small) {
+								margin-left:3px;
+								width:448px;
+								height:930px;
+								padding-left:20px;
+								padding-right:20px;
 								}
-.gambar							{
-								width:1147px;
-								margin-left:100px;
-								border:1px solid black;
 								}
 .kolom							{
 								margin-top:30px;
 								margin-left:56px;
 								width:250px;
 								height:280px;
-								border:2px solid white;
+								border:2px solid black;
 								cursor:pointer;
 								overflow:hidden;
 								float:left;
 								position:relative;
-								}
-.kolom:hover .caption			{
+	@media screen and (max-width: $break-small) {
+								width:170px;
+								height:200px;
+								margin-left:25px;
+								margin-top:15px;
+								}				
+	&:hover .caption			{
 								opacity:0.9;
 								top:0;
 								}
-.kolom img						{
+	img						{
 								transition:1.5s;
 								-moz-transition:1.5s;
 								-webkit-transition:1.5s;
 								-o-transition:1.5s;
 								-ms-transition:1.5s;
 								}
-.kolom:hover img 				{
+	&:hover img 				{
 								transform:scale(1.1);
 								-moz-transform:scale(1.1);
 								-webkit-transform:scale(1.1);
 								-o-transform:scale(1.1);
 								-ms-transform:scale(1.1);
+								}
+	&:hover h3, &:hover p		{
+								left:0;
+								}
 								}
 .caption						{
 								transition:all .4s ease-in;
@@ -107,22 +83,25 @@ body							{
 								background-color:rgba(0,0,0,4);
 								color:white;
 								font-family:arial;
-								}
-.caption p						{
+								
+	p							{
 								transition-delay:1.2s;
 								-moz-transition-delay:1.2s;
 								-webkit-transition-delay:1.2s;
 								-o-transition-delay:1.2s;
 								-ms-transition-delay:1.2s;
+	@media screen and (max-width: $break-small) {
+								display:none;
 								}
-.caption h3						{
+								}
+	h3							{
 								transition-delay:1s;
 								-moz-transition-delay:1s;
 								-webkit-transition-delay:1s;
 								-o-transition-delay:1s;
 								-ms-transition-delay:1s;
 								}
-.caption h3, .caption p 			{
+	h3,  p 						{
 								transition:all .4s;
 								-moz-transition:all .4s;
 								-webkit-transition:all .4s;
@@ -134,20 +113,9 @@ body							{
 								position:relative;
 								left:100%;
 								}
-.kolom:hover h3, .kolom:hover p	{left:0;}
+								}
 .caption						{
 								padding:10px 10px 10px 10px;
 								margin-top:20px;
 								background-color:black;
-								}
-.footer							{
-								margin-left:100px;
-								width:85%;
-								height:50px;
-								border:1px solid black;
-								color:white;
-								background:#323232;
-								text-align:center;
-								font-family:Times New Roman;
-								padding-top:30px;
 								}
