--- a/css/css/style.scss
+++ b/css/css/style.scss
@@ -3,8 +3,9 @@
 @import 'content';
 @import 'footer';
 
-body							{
-								font-family:arial;
-								margin:0px 0px 0px 0px;
-								background-color: #cccccc;
-								}
+body {
+	font-family:arial;
+	margin:0px 0px 0px 0px;
+	background-color: #cccccc;
+	width:1304px;
+}
