--- a/css/css/_content.scss
+++ b/css/css/_content.scss
@@ -1,121 +1,122 @@
 $break-small:480px;
 
-.gambar							{
-								width:87%;
-								margin-left:100px;
-								border:1px solid black;
+.gambar	{
+	width:90%;
+	height: 80%;
+	margin-left:80px;
+	border:1px solid black;
 	@media screen and (max-width: $break-small) {
-								margin-left:3px;
-								width:448px;
-								height:298px;
-								}
-								}
-.isi							{
-								font-family:arial;
-								background:#F7F3E8;
-								color:#000000;
-								font-size:20px;
-								padding-top:30px;
-								padding-left:70px;
-								padding-right:70px;
-								margin-left:100px;
-								width:76.64%;
-								height:800px;
-								border:1px solid black;
+		margin-left:3px;
+		width:448px;
+		height:298px;
+	}
+}
+.isi {
+	text-align: justify;
+	font-family:arial;
+	background:#F7F3E8;
+	color:#000000;
+	font-size:20px;
+	padding-top:30px;
+	padding-left:70px;
+	padding-right:70px;
+	margin-left:80px;
+	width:79.33%;
+	height:800px;
+	border:1px solid black;
 	@media screen and (max-width: $break-small) {
-								margin-left:3px;
-								width:448px;
-								height:930px;
-								padding-left:20px;
-								padding-right:20px;
-								}
-								}
-.kolom							{
-								margin-top:30px;
-								margin-left:56px;
-								width:250px;
-								height:280px;
-								border:2px solid black;
-								cursor:pointer;
-								overflow:hidden;
-								float:left;
-								position:relative;
+		margin-left:3px;
+		width:448px;
+		height:930px;
+		padding-left:20px;
+		padding-right:20px;
+	}
+}
+.kolom {
+	margin-top:30px;
+	margin-left:56px;
+	width:250px;
+	height:280px;
+	border:2px solid black;
+	cursor:pointer;
+	overflow:hidden;
+	float:left;
+	position:relative;
 	@media screen and (max-width: $break-small) {
-								width:170px;
-								height:200px;
-								margin-left:25px;
-								margin-top:15px;
-								}				
-	&:hover .caption			{
-								opacity:0.9;
-								top:0;
-								}
-	img						{
-								transition:1.5s;
-								-moz-transition:1.5s;
-								-webkit-transition:1.5s;
-								-o-transition:1.5s;
-								-ms-transition:1.5s;
-								}
-	&:hover img 				{
-								transform:scale(1.1);
-								-moz-transform:scale(1.1);
-								-webkit-transform:scale(1.1);
-								-o-transform:scale(1.1);
-								-ms-transform:scale(1.1);
-								}
-	&:hover h3, &:hover p		{
-								left:0;
-								}
-								}
-.caption						{
-								transition:all .4s ease-in;
-								transition-delay:.5s;
-								-moz-transition-delay:.5s;
-								-webkit-transition-delay:.5s;
-								-o-transition-delay:.5s;
-								-ms-transition-delay:.5s;
-								opacity:0;
-								position:absolute;
-								top:-100%;
-								width:100%;
-								height:100%;
-								background-color:rgba(0,0,0,4);
-								color:white;
-								font-family:arial;
-								
-	p							{
-								transition-delay:1.2s;
-								-moz-transition-delay:1.2s;
-								-webkit-transition-delay:1.2s;
-								-o-transition-delay:1.2s;
-								-ms-transition-delay:1.2s;
-	@media screen and (max-width: $break-small) {
-								display:none;
-								}
-								}
-	h3							{
-								transition-delay:1s;
-								-moz-transition-delay:1s;
-								-webkit-transition-delay:1s;
-								-o-transition-delay:1s;
-								-ms-transition-delay:1s;
-								}
-	h3,  p 						{
-								transition:all .4s;
-								-moz-transition:all .4s;
-								-webkit-transition:all .4s;
-								-o-transition:all .4s;
-								-ms-transition:all .4s;
-								padding:20px 20px 10px 10px;
-								margin-top:0px;
-								margin-bottom:0px;
-								position:relative;
-								left:100%;
-								}
-								}
-.caption						{
-								padding:10px 10px 10px 10px;
-								margin-top:20px;
-								background-color:black;
-								}
+		width:170px;
+		height:200px;
+		margin-left:25px;
+		margin-top:15px;
+	}				
+	&:hover .caption {
+		opacity:0.9;
+		top:0;
+	}
+	img	{
+		transition:1.5s;
+		-moz-transition:1.5s;
+		-webkit-transition:1.5s;
+		-o-transition:1.5s;
+		-ms-transition:1.5s;
+		}
+	&:hover img {
+		transform:scale(1.1);
+		-moz-transform:scale(1.1);
+		-webkit-transform:scale(1.1);
+		-o-transform:scale(1.1);
+		-ms-transform:scale(1.1);
+	}
+	&:hover h3, &:hover p {
+		left:0;
+	}
+}
+.caption {
+	transition:all .4s ease-in;
+	transition-delay:.5s;
+	-moz-transition-delay:.5s;
+	-webkit-transition-delay:.5s;
+	-o-transition-delay:.5s;
+	-ms-transition-delay:.5s;
+	opacity:0;
+	position:absolute;
+	top:-100%;
+	width:100%;
+	height:100%;
+	background-color:rgba(0,0,0,4);
+	color:white;
+	font-family:arial;						
+	p {
+		transition-delay:1.2s;
+		-moz-transition-delay:1.2s;
+		-webkit-transition-delay:1.2s;
+		-o-transition-delay:1.2s;
+		-ms-transition-delay:1.2s;
+		@media screen and (max-width: $break-small) {
+			display:none;
+		}
+	}
+	h3 {
+		transition-delay:1s;
+		-moz-transition-delay:1s;
+		-webkit-transition-delay:1s;
+		-o-transition-delay:1s;
+		-ms-transition-delay:1s;
+	}
+	h3,  p {
+		transition:all .4s;
+		-moz-transition:all .4s;
+		-webkit-transition:all .4s;
+		-o-transition:all .4s;
+		-ms-transition:all .4s;
+		padding:20px 20px 10px 10px;
+		margin-top:0px;
+		margin-bottom:0px;
+		position:relative;
+		left:100%;
+	}
+}
+.caption {
+	padding:10px 10px 10px 10px;
+	margin-top:20px;
+	background-color:black;
+}
